# graphql-orm-macros

./: Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKENDS.md  HOST_INTEGRATION.md
fixtures/full-stack/: Cargo.toml
fixtures/full-stack/src/: lib.rs
fixtures/postgres-smoke/: Cargo.toml
fixtures/postgres-smoke/src/: lib.rs
src/: lib.rs
