[package]
name = "graphql-orm-macros"
version = "0.3.1"
edition = "2024"
authors = ["Toby Martin <toby@dastari.net>"]
description = "Procedural macros for async-graphql and ORM-backed entities, relations, and CRUD operations."
readme = "README.md"
repository = "https://github.com/Dastari/graphql-orm-macros"
homepage = "https://github.com/Dastari/graphql-orm-macros"
documentation = "https://docs.rs/graphql-orm-macros"
keywords = ["graphql", "proc-macro", "async-graphql", "sqlx", "orm"]
categories = ["development-tools::procedural-macro-helpers", "database", "web-programming"]

[lib]
proc-macro = true

[features]
default = ["sqlite"]
sqlite = []
postgres = []
mysql = []
mssql = []

[dependencies]
convert_case = "0.7"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
