[package]
name = "postgres-smoke"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-graphql = "7"
chrono = { version = "0.4", features = ["serde"] }
graphql-orm-macros = { path = "../..", default-features = false, features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
